# ClaudeCoach

./: .env.example  .gitignore  METRICS.md  pyproject.toml  render.yaml  schema.md  spec.md
alembic/: env.py
alembic/versions/: d61dc54a6d0d_initial_schema.py
app/: config.py  db.py  main.py
app/bot/: commands.py  conversations.py  db_helpers.py  runner.py
app/models/: __init__.py  invite_code.py  oauth_state.py  run.py  user.py
app/prompts/: coaching_tool_schema.json  v1.md  v1.py
app/routes/: auth.py  health.py  webhook.py
app/services/: claude.py  coaching.py  hr_zones.py  metrics.py  pace.py  strava.py  telegram.py
prompts/: v1.md
scripts/: phase1_demo.py  phase2_demo.py  register_webhook.py  save_fixture.py  seed_test_user.py  strava_oauth_dance.py
tests/: test_claude_prompt.py  test_hr_zones.py  test_metrics.py  test_pace.py  test_prompts_v1.py  test_telegram.py
tests/fixtures/: strava_activity_sample.json  strava_streams_sample.json
